--- a/style.css
+++ b/style.css
@@ -171,11 +171,116 @@ div.hero-text {
     letter-spacing: 10px;
 }
 
+/******************************/
+/* carousel of making process */
+/******************************/
+div.process-container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
 
+ol.description {
+	width: 45vw;
+	height: 50vh;
+	margin-left: 3rem;
+	position: relative;
+	list-style-type: decimal;
+}
+ol.description li {
+	position: absolute;
+	width: 95%;
+	padding: 2.5rem;
+	background-color: #f9f9f9;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	display: none;
+}
+ol.description li:first-child {
+	display: block;
+}
 
+div.slide-wrapper {
+	/* size of one slide */
+	width: 35vw;
+	height: 75vh;
+	overflow: hidden;
+	position: relative;
+}
+ul.slide-container {
+	/* slide width x 8 */
+	width: 280vw;
+	height: 80vh;
+	display: flex;
+	justify-content: flex-start;
+}
 
+ul.slide-container li {
+	flex-grow: 1;
+	height: 80vh;
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+}
+
+ul.slide-container li:nth-child(1) {
+	background-image: url('image/process-1.jpg');
+}
+ul.slide-container li:nth-child(2) {
+	background-image: url('image/process-2.jpg');
+}
+ul.slide-container li:nth-child(3) {
+	background-image: url('image/process-3.jpg');
+}
+ul.slide-container li:nth-child(4) {
+	background-image: url('image/process-5.png');
+}
+ul.slide-container li:nth-child(5) {
+	background-image: url('image/process-6.png');
+}
+ul.slide-container li:nth-child(6) {
+	background-image: url('image/process-7.jpg');
+}
+ul.slide-container li:nth-child(7) {
+	background-image: url('image/process-8.jpg');
+}
+ul.slide-container li:nth-child(8) {
+	background-image: url('image/choco-3.jpg');
+}
+
+div.slide-wrapper a {
+	position: absolute;
+	top: 45%;
+	font-size: 3rem;
+	color: grey;
+	cursor: pointer;
+}
+div.slide-wrapper a.prev {
+	left: 5%;
+}
+div.slide-wrapper a.next {
+	right: 5%;
+}
 
 /*  utility  */
+h1 {
+	font-size: 3rem;
+	text-align: center;
+	margin: 4rem 1rem 2rem 1rem;
+	text-transform: capitalize;
+	color: rgb(132, 96, 54);
+}
+
+h3 {
+	color: rgb(132, 96, 54);
+	padding-bottom: 1rem;	
+	font-size: 1.8rem;
+}
+
+p {
+	font-size: 1.5rem;
+}
 button {
 	width: 100px;
 	height: 50px;
