--- a/style.css
+++ b/style.css
@@ -10,10 +10,96 @@
 	font-family: 'Roboto Slab', serif;
 }
 
+
+/*
+hamburger menu
+wrap 
+	input checkbox opacity: 0 (use the checked to chnage properties)
+	hamburger wrap 
+		div for one line (before/ after)
+*/
+
+
+
 /****************/
 /*navigation bar*/
 /****************/
-nav > ul {
+
+/* small screen navbar */
+
+nav.sm-screen {
+	background: rgb(132, 96, 54);
+	height: 10vh;
+	width: 100vw;
+	position: fixed;
+	top: 0;
+	z-index: 10;
+	display: none;
+}
+nav.sm-screen > a {
+	color: #fff;
+	font-family: 'Kaushan Script', cursive;
+	font-size: 1.3rem;
+	font-weight: 200;
+	text-transform: capitalize;
+	text-align: center;
+}
+
+nav.sm-screen > div.menu-wrap {
+	position: relative;
+	margin-left: 10px;
+	height: 20px;
+	width: 20px;	
+}
+
+nav.sm-screen > div.menu-wrap >.toggler {
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	top: 0;
+	left: 0;
+	opacity: 0;
+	z-index: 5;
+	cursor: pointer;
+}
+
+nav.sm-screen > div.menu-wrap > div.hamburger {
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	top: 0;
+	left: 0;	
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+nav.sm-screen > div.menu-wrap > div.hamburger > div {
+	position: relative;
+	/*flex: none;*/
+	width: 100%;
+	height: 2px;
+	background-color: #fff;
+}
+
+nav.sm-screen > div.menu-wrap > div.hamburger > div::before,
+nav.sm-screen > div.menu-wrap > div.hamburger > div::after {
+	content: '';
+	width: 100%;
+	height: 2px;
+	background-color: #fff;
+	position: absolute;
+	top: -5px;
+}
+
+nav.sm-screen > div.menu-wrap > div.hamburger > div::after {
+	top: 5px;
+}
+
+
+/* large screen navbar */
+
+nav.lg-screen > ul {
 	background: rgb(132, 96, 54);
 	height: 10vh;
 	width: 100vw;
@@ -26,47 +112,51 @@ nav > ul {
 	z-index: 10;
 }
 
-nav > ul > li > a {
+nav.lg-screen > ul > li > a {
 	text-transform: uppercase;
 	font-size: 1.1rem;
 	font-weight: 200;
 	color: #fff;
 }
-nav > ul > li:first-child > a {
+nav.lg-screen > ul > li:first-child > a {
 	font-family: 'Kaushan Script', cursive;
 	font-size: 2rem;
 	text-transform: capitalize;
 }
 /* the logo */
-nav > ul > li:first-child {
-	margin-left: 3rem;
+nav.lg-screen > ul > li:first-child {
+	margin-left: 2vw;
 	margin-right: 15vw;
 }
-nav > ul > li:last-child {
+nav.lg-screen > ul > li:last-child {
 	margin-right: 3vw;
 }
-nav > ul > li {
-	padding: 20px;
+nav.lg-screen > ul > li {
+	padding: 20px 0;
 }
 /* pull down menu */
-nav > ul > li > ul {
+nav.lg-screen > ul > li > ul {
 	background: rgb(132, 96, 54);
 	position: absolute;
 	top: 9.7vh;
 	display: none;
 }
-nav > ul > li:hover > ul,
-nav > ul > li > ul:hover {
+nav.lg-screen > ul > li:hover > ul,
+nav.lg-screen > ul > li > ul:hover {
 	display: block;
 }
-nav > ul > li > ul > li {
+nav.lg-screen > ul > li > ul > li {
 	padding: 1rem;
 	
 }
-nav > ul > li > ul > li > a {
+nav.lg-screen > ul > li > ul > li > a {
 	text-transform: uppercase;
 	color: #fff;
 }
+
+
+
+
 
 /* home page */
 
@@ -309,9 +399,6 @@ div.slide-wrapper a.next {
 
 /*  utility  */
 
-
-
-
 h1 {
 	font-size: 3rem;
 	text-align: center;
@@ -326,16 +413,12 @@ h3 {
 	font-size: 1.8rem;
 }
 
-div {
-	width: 80vw;
-	margin: auto;
-}
-
 p {
 	font-size: 1.2rem;
 	font-family: verdana;
-	margin-bottom: 2rem;
+	margin-bottom: 2rem;	
 }
+
 button {
 	width: 100px;
 	height: 50px;
@@ -343,6 +426,48 @@ button {
 	text-align: center;
 }
 
+
+/* media query */
+
+@media screen and (max-width: 900px) {
+	nav.lg-screen > ul > li:first-child > a {
+		font-size: 1.2rem;
+	}
+
+	nav.lg-screen > ul > li:first-child {
+		margin-left: 0vw;
+    	margin-right: 0vw;
+	}
+
+	nav.lg-screen > ul > li > a {
+		font-size: 0.8rem;
+	}	
+}
+
+@media screen and (max-width: 560px) {
+	div.hero-text {
+		font-size: 2rem;
+	}
+	nav.lg-screen {
+		display: none;
+	}
+	nav.sm-screen {
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+		justify-content: center;
+		align-items: center;
+	}
+	section.hero {
+		display: flex;
+		flex-direction: column;		
+	}
+	div.beans,
+	ul.products {
+		position: relative;
+		width: 100%
+	}
+	
+}
 
 
 
