--- a/style.css
+++ b/style.css
@@ -36,6 +36,32 @@ nav.sm-screen {
 	z-index: 10;
 	display: none;
 }
+
+nav.sm-screen > div.menu-wrap > div.menu {
+	display: none;
+	/* not working */
+	transition: all 0.4s ease; 
+}
+
+nav.sm-screen > div.menu-wrap > div.menu > ul {
+	width: 100vw;
+	height: 85vh;
+	background-color: rgba(0, 0, 0, 0.7);
+	position: fixed;
+	top: 10vh;
+	left: 0;
+	text-align: center;	
+}
+nav.sm-screen > div.menu-wrap > div.menu > ul > li {
+	padding: 20px;
+}
+
+nav.sm-screen > div.menu-wrap > div.menu > ul > li > a {
+	color: #fff;
+	text-transform: capitalize;
+	font-size: 1.1rem;	
+}		
+
 nav.sm-screen > a {
 	color: #fff;
 	font-family: 'Kaushan Script', cursive;
@@ -45,13 +71,14 @@ nav.sm-screen > a {
 	text-align: center;
 }
 
+/* hamburger menu */
 nav.sm-screen > div.menu-wrap {
 	position: relative;
 	margin-left: 10px;
 	height: 20px;
 	width: 20px;	
 }
-
+/* use the checkbox on top but invisible */
 nav.sm-screen > div.menu-wrap >.toggler {
 	position: absolute;
 	height: 100%;
@@ -62,7 +89,7 @@ nav.sm-screen > div.menu-wrap >.toggler {
 	z-index: 5;
 	cursor: pointer;
 }
-
+/* hamburger menu div */
 nav.sm-screen > div.menu-wrap > div.hamburger {
 	position: absolute;
 	height: 100%;
@@ -73,13 +100,13 @@ nav.sm-screen > div.menu-wrap > div.hamburger {
 	justify-content: center;
 	align-items: center;
 }
-
+/* the middle line, and the top and bottom lines */
 nav.sm-screen > div.menu-wrap > div.hamburger > div {
 	position: relative;
-	/*flex: none;*/
 	width: 100%;
 	height: 2px;
 	background-color: #fff;
+	transition: all 0.4s ease;
 }
 
 nav.sm-screen > div.menu-wrap > div.hamburger > div::before,
@@ -95,7 +122,24 @@ nav.sm-screen > div.menu-wrap > div.hamburger > div::after {
 nav.sm-screen > div.menu-wrap > div.hamburger > div::after {
 	top: 5px;
 }
+/* the animation via checkbox */
+nav.sm-screen > div.menu-wrap >.toggler:checked + div.hamburger > div {
+	transform: rotate(135deg);	
+}
 
+nav.sm-screen > div.menu-wrap >.toggler:checked + div.hamburger > div::before, 
+nav.sm-screen > div.menu-wrap >.toggler:checked + div.hamburger > div::after {
+	top: 0;
+	transform: rotate(90deg);
+}
+
+nav.sm-screen > div.menu-wrap >.toggler:checked ~ div.menu {
+	display: block;
+}
+
+nav.sm-screen > div.menu-wrap >.toggler:checked:hover + div.hamburger > div {
+	transform: rotate(225deg);
+} 
 
 /* large screen navbar */
 
@@ -466,7 +510,7 @@ button {
 		position: relative;
 		width: 100%
 	}
-	
+
 }
 
 
