fix the small screen for shop page

--- a/css/style.css
+++ b/css/style.css
@@ -543,6 +543,11 @@ button {
 	footer {
 		display: none;
 	}
+	/* shop page */
+	div.bar-container,
+	div.treat-container {
+		display: block;		
+	}
 	
 }
 
